changed repo and home page

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Audio / Voice Recorder for React",
   "author": "noobieprogrammer",
   "license": "MIT",
-  "repository": "doppelgunner/audio-react-recorder",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/doppelgunner/audio-react-recorder.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
   "engines": {
     "node": ">=10"
   },
+  "homepage": "https://github.com/doppelgunner/audio-react-recorder#readme",
   "keywords": [
     "react",
     "record",
